[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "checkup"
version = "1.3.0"
description = "Lightweight zero-dependency network uptime monitor for Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
  { name = "vgrigolaia", email = "vasikogrigolaia@gmail.com" }
]
keywords = ["network", "monitoring", "uptime", "ping", "tcp", "sysadmin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: System :: Networking :: Monitoring",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
checkup = "checkup:main"

[project.urls]
Homepage   = "https://github.com/vgrigolaia/checkup"
Repository = "https://github.com/vgrigolaia/checkup"
Issues     = "https://github.com/vgrigolaia/checkup/issues"

[tool.setuptools]
py-modules = ["checkup"]
